--- a/Web/src/app/components/util/highlight-field/highlight-field.component.html
+++ b/Web/src/app/components/util/highlight-field/highlight-field.component.html
@@ -1,1 +1,1 @@
-<span [class.bull]="bull" [class.bear]="bear">{{getValue()}}</span>
+<span [class.bull]="bull" [class.bear]="bear" [class.dark]="dark">{{getValue()}}</span>
