--- a/Web/src/app/components/util/ticker-field/ticker-field.component.html
+++ b/Web/src/app/components/util/ticker-field/ticker-field.component.html
@@ -1,1 +1,1 @@
-<highlight-field [value]="value" [suffix]="getSuffix()" [prefix]="getPreffix()"></highlight-field>
+<highlight-field [value]="value" [suffix]="getSuffix()" [prefix]="getPreffix()" [blinkGray]="blinkGray"></highlight-field>
