--- a/Web/src/app/components/account/balance-info/balance-info.component.html
+++ b/Web/src/app/components/account/balance-info/balance-info.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutGap="8px" fxLayoutAlign.gt-sm="center" fxLayoutAlign.lt-md="space-evenly center">
-  <div class="balance-item" fxLayout="column" fxLayoutGap.gt-sm="9px" fxLayoutGap.lt-md="6px">
-    <div class="label">
+  <div class="balance-item" fxLayout="column" fxLayoutGap.gt-sm="9px" fxLayoutGap.lt-md="6px" fxLayoutAlign="center center">
+    <div matTooltip="Total value of all your assets" class="label">
       Equity
     </div>
     <div class="value">
@@ -8,8 +8,8 @@
     </div>
   </div>
   <div class="separator"></div>
-  <div class="balance-item" fxLayout="column" fxLayoutGap.gt-sm="9px" fxLayoutGap.lt-md="6px">
-    <div class="label">
+  <div class="balance-item" fxLayout="column" fxLayoutGap.gt-sm="9px" fxLayoutGap.lt-md="6px" fxLayoutAlign="center center">
+    <div matTooltip="USD balance" class="label">
       Balance
     </div>
     <div class="value">
@@ -17,8 +17,8 @@
     </div>
   </div>
   <div class="separator"></div>
-  <div class="balance-item" fxLayout="column" fxLayoutGap.gt-sm="9px" fxLayoutGap.lt-md="6px">
-    <div class="label">
+  <div class="balance-item" fxLayout="column" fxLayoutGap.gt-sm="9px" fxLayoutGap.lt-md="6px" fxLayoutAlign="center center">
+    <div matTooltip="USD balance - USD allocated to open orders" class="label">
       Available
     </div>
     <div class="value">
