--- a/Web/src/app/components/trade/portfolio/performance/trade-summary/trade-summary.component.html
+++ b/Web/src/app/components/trade/portfolio/performance/trade-summary/trade-summary.component.html
@@ -2,28 +2,28 @@
     <div class="box-header" fxLayout="row" fxLayoutAlign="center center" *ngIf="closedPosition">TRADES ({{closedPosition.orderCount}})</div>
     <div fxLayout="row" fxLayoutGap="21px">
         <div class="summary-column" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
-            <div>Total Profit</div>
+            <div matTooltip="(Current Equity / 100,000USD) - 1">Total Profit</div>
             <div class="trade-data">
                 <percentage-display *ngIf="advisor" [value]="advisor.totalProfitPercentage"></percentage-display>
             </div>
             <div class="gap"></div>
-            <div>Open positions P/L</div>
+            <div >Open positions P/L</div>
             <div class="trade-data" *ngIf="openPosition">
                 <percentage-display [value]="openPosition.averageReturn"></percentage-display>
             </div>
         </div>
         <div class="summary-column" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
-            <div>Winning Trades</div>
+            <div matTooltip="# profitable trades / # total trades">Winning Trades</div>
             <div class="trade-data" *ngIf="closedPosition">{{closedPosition.successRate | percentageDisplay: 1}}</div>
             <div class="gap"></div>
-            <div>Avg. Return</div>
+            <div matTooltip="Average return per closed trade">Avg. Return</div>
             <div class="trade-data"><percentage-display *ngIf="advisor" [value]="advisor.averageReturn"></percentage-display></div>
         </div>
     </div>
     <div class="line-separator"></div>
     <div fxLayout="row" fxLayoutGap="21px">
         <div class="summary-column" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
-            <div>Daily Drawdown</div>
+            <div matTooltip="Maximum % loss in a day">Daily Drawdown</div>
             <div class="trade-data" *ngIf="advisorPerformance">{{advisorPerformance.dailyDrawdown | percentageDisplay}}</div>
             <div class="gap"></div>
             <div>Avg. Trade Time</div>
