--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -1163,3 +1163,7 @@ button.mat-menu-item:hover a{
   color: white;
   margin-right: 10px;
 }
+
+[mattooltip] {
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
+}
