--- a/Web/src/app/components/trade/portfolio/open-positions/orders-table/orders-table.component.html
+++ b/Web/src/app/components/trade/portfolio/open-positions/orders-table/orders-table.component.html
@@ -23,17 +23,13 @@
         <td mat-cell *matCellDef="let order"> {{order.price | valueDisplay}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="PLValue">
-        <th ngClass.lt-sm="hidden" mat-header-cell *matHeaderCellDef mat-sort-header="profitValue"> P/L($) </th>
-        <td ngClass.lt-sm="hidden" mat-cell *matCellDef="let order">
-          <ticker-profit-field [startValue]="order.profitValue" [orderType]="order.type" [priceValue]="order.price" [quantityValue]="order.remainingQuantity" [pair]="order.pair"(onNewValue)="onNewProfit($event, order)"></ticker-profit-field>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="PLPercentage">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header="profit"> P/L(%) </th>
+      <ng-container matColumnDef="PL">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="profit"> P/L </th>
         <td mat-cell *matCellDef="let order">
-          <ticker-percentage-field [startValue]="order.profit" [orderType]="order.type" [referenceValue]="order.price" [pair]="order.pair" (onNewValue)="onNewPercentageProfit($event, order)"></ticker-percentage-field>
+          <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="4px">     
+            <ticker-percentage-field [startValue]="order.profit" [orderType]="order.type" [referenceValue]="order.price" [pair]="order.pair" (onNewValue)="onNewPercentageProfit($event, order)"></ticker-percentage-field>
+            <ticker-profit-field [startValue]="order.profitValue" [orderType]="order.type" [priceValue]="order.price" [quantityValue]="order.remainingQuantity" [pair]="order.pair"(onNewValue)="onNewProfit($event, order)"></ticker-profit-field>
+          </div>
         </td>
       </ng-container>
 
