--- a/Web/src/app/components/asset/asset-details/asset-details.component.css
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.css
@@ -116,8 +116,13 @@
     margin: -10px auto;
 }
 
-@media(min-width:960px){
 .positions-tab{
     width: calc(100% - 215px);
 }
+
+@media(max-width:959px){
+    .positions-tab{
+        width: calc(100% - 10px);
+        margin-left: 5px;
+    }
 }
