--- a/Web/src/app/components/trade/portfolio/open-positions/orders-table/orders-table.component.css
+++ b/Web/src/app/components/trade/portfolio/open-positions/orders-table/orders-table.component.css
@@ -35,8 +35,7 @@ th.cdk-column-positions{
 .cdk-column-units{width:10%}
 .cdk-column-value{width:10%}
 .cdk-column-open{width:10%}
-.cdk-column-PLValue{width:12%}
-.cdk-column-PLPercentage{width:12%}
+.cdk-column-PL{width:12%}
 .cdk-column-SL{width:10%}
 .cdk-column-TP{width:10%}
 .cdk-column-close{width: 7%;}
