--- a/Web/src/app/components/trade/portfolio/history/history.component.html
+++ b/Web/src/app/components/trade/portfolio/history/history.component.html
@@ -1,38 +1,36 @@
 <div *ngIf='positionResponse' class="header" fxLayout.gt-sm="row" fxLayout.lt-sm="column" fxLayoutAlign="space-between center">
   <div fxLayout="row" class="boxes-wrapper" >
     <div fxLayout="row" class="boxes">
-      <div>{{dataSource.data.length}}
-        <br>
+      <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
+        <div>{{dataSource.data.length}}</div>
         <span>Trades</span>
       </div>
-      <div>{{positionResponse.successRate | percentageDisplay: 1}}
-        <br>
+      <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
+        <div>{{positionResponse.successRate | percentageDisplay: 1}}</div>
         <span>Profitable</span>
       </div>
-      <div>
+      <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
         <percentage-display [value]="positionResponse.averageReturn"></percentage-display>
-        <br>
         <span>Avg.Returns</span>
       </div>
     </div>
-    <div class="returns">{{positionResponse.totalProfit | valueDisplay}}
-      <br>
+    <div class="returns" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
+      <div>{{positionResponse.totalProfit | valueDisplay}}</div>
       <span>Total Return</span>
     </div>
   </div>
   <div class="trades" fxLayout="row">
-    <div>{{bestTrade | percentageDisplay}}
-      <br>
+    <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
+      <div>{{bestTrade | percentageDisplay}}</div>
       <span>Best Trade</span>
     </div>
-    <div>{{worstTrade | percentageDisplay}}
-      <br>
+    <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
+      <div>{{worstTrade | percentageDisplay}}</div>
       <span>Worst Trade</span>
     </div>
-    <div>
+    <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="2px">
       <span *ngIf="positionResponse && positionResponse.averageTradeMinutes">{{getAvgTradeMinutes() | amTimeAgo:'true'}}</span>
       <span *ngIf="!positionResponse || !positionResponse.averageTradeMinutes">-</span>
-      <br>
       <span>Avg. Trade Time</span>
     </div>
   </div>
