--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -12,7 +12,9 @@
       <div fxHide.gt-sm="true" class="top-separator"></div>
       <router-outlet *ngIf="!showEmptyPage()"></router-outlet>
     </mat-sidenav-content>
-    <mat-sidenav *ngIf="miniViewQuery.matches" opened class="mini-view" mode="side" position="end">Mini View</mat-sidenav>
+    <mat-sidenav *ngIf="miniViewQuery.matches" opened class="mini-view" mode="side" position="end">
+      <mini-view></mini-view>
+    </mat-sidenav>
   </mat-sidenav-container>
 </div>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
