--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -1167,3 +1167,36 @@ button.mat-menu-item:hover a{
 [mattooltip] {
   border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
 }
+
+.border-tabs .mat-tab-label-active {
+  background-color: #262626;
+  border-top: 1px solid #4c4c4c;
+  border-left: 1px solid #4c4c4c;
+  border-right: 1px solid #4c4c4c;
+  border-bottom: none !important;
+}
+
+.border-tabs .mat-tab-label {
+  border-bottom: 1px solid #4c4c4c;
+}
+
+.border-tabs .mat-tab-label-container .mat-ink-bar {
+  display: none !important;
+}
+
+.border-tabs .mat-tab-header {
+  border-bottom: none !important;
+}
+
+.border-tabs .mat-tab-label-content {
+  color: #ffffff !important;
+  font-size: 14px !important;
+  letter-spacing: 0.4px !important;
+}
+
+.border-tabs .mat-tab-body-wrapper {
+  background-color: #262626;
+  border-bottom: 1px solid #4c4c4c;
+  border-left: 1px solid #4c4c4c;
+  border-right: 1px solid #4c4c4c;
+}
