--- a/Web/src/app/components/asset/asset-mini-view/asset-mini-view-table/asset-mini-view-table.component.css
+++ b/Web/src/app/components/asset/asset-mini-view/asset-mini-view-table/asset-mini-view-table.component.css
@@ -1,5 +1,9 @@
 :host td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
-    padding-left: 4px !important;
+    padding-left: 5px !important;
+}
+
+:host td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type, th.mat-header-cell:last-of-type {
+    padding-right: 0px !important;
 }
 
 :host tr.mat-footer-row, tr.mat-row {
@@ -8,4 +12,18 @@
 
 :host ::ng-deep .mat-paginator-container {
     min-height: 30px !important;
+    height: 30px !important;
+}
+
+.cdk-column-market span {
+    font-weight: 500;
+}
+.cdk-column-lastPrice {
+    width: 95px;
+}
+.cdk-column-change {
+    width: 80px;
+}
+.cdk-column-trade {
+    width: 30px;
 }
