--- a/Web/src/app/components/util/follow-unfollow/follow-unfollow.component.html
+++ b/Web/src/app/components/util/follow-unfollow/follow-unfollow.component.html
@@ -1,8 +1,8 @@
-<div [promiseBtn]="promise" class="follow-link" *ngIf="following" (click)="onUnfollowClick()">
+<div [promiseBtn]="promise" class="follow-link" [class.only-star]="showOnlyStar" *ngIf="following" (click)="onUnfollowClick()">
   <fa-icon [icon]="['fas','star']"></fa-icon>
   <span *ngIf="!onlyShowStar()">&nbsp;Following</span>
 </div>
-<div [promiseBtn]="promise" class="follow-link" *ngIf="!following" (click)="onFollowClick()">
+<div [promiseBtn]="promise" class="follow-link" [class.only-star]="showOnlyStar" *ngIf="!following" (click)="onFollowClick()">
   <fa-icon [icon]="['far','star']"></fa-icon>
   <span *ngIf="!onlyShowStar()">&nbsp;Follow</span>
 </div>
