Adjustment on asset mini view

--- a/Web/src/app/components/asset/asset-mini-view/asset-mini-view-table/asset-mini-view-table.component.html
+++ b/Web/src/app/components/asset/asset-mini-view/asset-mini-view-table/asset-mini-view-table.component.html
@@ -24,4 +24,4 @@
     </ng-container>
     <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index"></tr>
   </table>
-  <mat-paginator [hidePageSize]="true" [class.hidden]="!(assets && assets.length > 5)" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <mat-paginator [hidePageSize]="true" [class.hidden]="!(assets && assets.length > 5)" [pageSize]="5" showFirstLastButtons #paginator></mat-paginator>
