Portfolio mini view

--- a/Web/src/app/components/trade/new-trade/set-trade/set-trade.component.css
+++ b/Web/src/app/components/trade/new-trade/set-trade/set-trade.component.css
@@ -4,7 +4,7 @@
 
 .trade-btn {
     border-radius: 4px;
-    padding: 10px;
+    padding: 10px 0;
     cursor: pointer;
     letter-spacing: 1.8px;
     text-align: center;
