--- a/Web/src/app/components/trade/portfolio/performance/perfomance-open-positions/perfomance-open-positions.component.css
+++ b/Web/src/app/components/trade/portfolio/performance/perfomance-open-positions/perfomance-open-positions.component.css
@@ -3,3 +3,11 @@
     display: block;
     overflow: auto;
 }
+
+.mat-column-assetCode{
+    font-weight: 500;
+}
+
+.type-mini-view{
+    cursor: pointer;
+}
