trending assets and layout adjusments

--- a/Web/src/app/components/asset/assets-table/assets-table.component.css
+++ b/Web/src/app/components/asset/assets-table/assets-table.component.css
@@ -20,3 +20,8 @@
         width: 120px;
     }
 }
+
+.trending-layout td.mat-cell:first-of-type,
+.trending-layout td.mat-footer-cell:first-of-type {
+    padding-left: 14px !important;
+}
