--- a/Web/src/app/components/util/mini-view/mini-view.component.html
+++ b/Web/src/app/components/util/mini-view/mini-view.component.html
@@ -19,6 +19,6 @@
   </mat-tab>
   <mat-tab>  
       <ng-template mat-tab-label>TRENDING ASSETS</ng-template>
-      <div>CONTEUDO 2</div>
+      <trending-assets></trending-assets>
   </mat-tab>
 </mat-tab-group>
