--- a/Web/src/app/components/util/mini-view/mini-view.component.html
+++ b/Web/src/app/components/util/mini-view/mini-view.component.html
@@ -18,7 +18,11 @@
       <div>CONTEUDO 1</div>
   </mat-tab>
   <mat-tab>  
-      <ng-template mat-tab-label>TRENDING ASSETS</ng-template>
+      <ng-template mat-tab-label>TRENDING</ng-template>
       <trending-assets></trending-assets>
+  </mat-tab>
+  <mat-tab>
+        <ng-template mat-tab-label>NEWS</ng-template>
+        <news-list></news-list>
   </mat-tab>
 </mat-tab-group>
