--- a/Web/src/app/components/util/mini-view/mini-view.component.css
+++ b/Web/src/app/components/util/mini-view/mini-view.component.css
@@ -22,6 +22,10 @@
     width: 50%;
 }
 
+.bottom-tab-group ::ng-deep .mat-tab-header-pagination {
+    display: none !important;
+}
+
 .border-tabs ::ng-deep .mat-tab-body-wrapper{
     height: calc(100% - 30px);
 }
