--- a/Web/src/app/components/util/mini-view/mini-view.component.html
+++ b/Web/src/app/components/util/mini-view/mini-view.component.html
@@ -14,7 +14,7 @@
 <mat-tab-group class="bottom-tab-group border-tabs">
   <mat-tab> 
       <ng-template mat-tab-label>SIGNALS</ng-template>
-      <div>CONTEUDO 1</div>
+      <trade-signal (newSignal)="onNewSignal()"></trade-signal>
   </mat-tab>
   <mat-tab>  
       <ng-template mat-tab-label>TRENDING ASSETS</ng-template>
