--- a/Web/src/app/components/util/percentage-display/percentage-display.component.html
+++ b/Web/src/app/components/util/percentage-display/percentage-display.component.html
@@ -1,3 +1,3 @@
 <div class="variation" [class.bull]="value > 0" [class.bear]="value < 0">
-    <div class="arrow" *ngIf="value > 0">&uarr;&nbsp;</div><div class="arrow" *ngIf="value < 0">&darr;&nbsp;</div>{{Math.abs(value) | percentageDisplay}}
+    <div class="arrow" *ngIf="showArrow && value > 0">&uarr;&nbsp;</div><div class="arrow" *ngIf="showArrow && value < 0">&darr;&nbsp;</div>{{Math.abs(value) | percentageDisplay}}
 </div>
