--- a/Web/src/app/components/trade/portfolio/open-positions/open-positions.component.html
+++ b/Web/src/app/components/trade/portfolio/open-positions/open-positions.component.html
@@ -49,7 +49,7 @@
     <ng-container matColumnDef="close">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let position">
-        <button matRipple *ngIf="isOwner" [promiseBtn]="promise" (click)="closeAllOpenPositions(position.assetId, position.assetCode)">Close all {{position.assetCode}} positions</button>
+        <button matRipple *ngIf="isOwner" (click)="closeAllOpenPositions(position.assetId, position.assetCode)">Close all {{position.assetCode}} positions</button>
       </td>
     </ng-container>
 
